Zirconium/Antlr/ZirconiumParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/jshelton/RiderProjects/Zirconium/Zirconium\Zirconium.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class ZirconiumParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		USING=1, NAMESPACE=2, CLASS=3, INTERFACE=4, PUBLIC=5, PRIVATE=6, PROTECTED=7, 
		INTERNAL=8, STATIC=9, ABSTRACT=10, VIRTUAL=11, OVERRIDE=12, LET=13, NEW=14, 
		DELETE=15, RETURN=16, BREAK=17, CONTINUE=18, FOR=19, WHILE=20, IF=21, 
		ELSE=22, GET=23, SET=24, VOID=25, NULL=26, STRINGLITERAL=27, CHARLITERAL=28, 
		TRUE=29, FALSE=30, FLOATLITERAL=31, DOUBLELITERAL=32, INTLITERAL=33, PLUSPLUS=34, 
		MINUSMINUS=35, PLUSEQUALS=36, MINUSEQUALS=37, TIMESEQUALS=38, DIVIDEEQUALS=39, 
		MODULUSEQUALS=40, EQUALEQUAL=41, NOTEQUAL=42, ANDEQUALS=43, XOREQUALS=44, 
		OREQUALS=45, LESSTHANEQUAL=46, GREATERTHANEQUAL=47, LESSTHAN=48, GREATERTHAN=49, 
		EQUALS=50, ANDAND=51, OROR=52, AND=53, OR=54, XOR=55, DOT=56, ARROW=57, 
		PLUS=58, MINUS=59, STAR=60, DIVIDE=61, MODULUS=62, BANG=63, TILDE=64, 
		COLON=65, SEMICOLON=66, COMMA=67, OPENPAREN=68, CLOSEPAREN=69, OPENBRACE=70, 
		CLOSEBRACE=71, OPENCURLY=72, CLOSECURLY=73, IDENTIFIER=74, WS=75;
	public const int
		RULE_compilable = 0, RULE_usingStatements = 1, RULE_usingStatement = 2, 
		RULE_compilableStruct = 3, RULE_namespace = 4, RULE_compilationUnit = 5, 
		RULE_genericDeclaration = 6, RULE_genericImplmentation = 7, RULE_type = 8, 
		RULE_knownType = 9, RULE_voidPointer = 10, RULE_instanceableType = 11, 
		RULE_returnableType = 12, RULE_class = 13, RULE_classAccessibility = 14, 
		RULE_classSpecial = 15, RULE_classExtension = 16, RULE_classMember = 17, 
		RULE_memberAccessibility = 18, RULE_field = 19, RULE_property = 20, RULE_getSet = 21, 
		RULE_autoGetSet = 22, RULE_function = 23, RULE_functionSpecial = 24, RULE_parameterDeclaration = 25, 
		RULE_destructor = 26, RULE_interface = 27, RULE_interfaceAccessibility = 28, 
		RULE_interfaceMember = 29, RULE_functionDefinition = 30, RULE_propertyDefinition = 31, 
		RULE_freeFunction = 32, RULE_freeFunctionAccessibility = 33, RULE_scope = 34, 
		RULE_scopeStatement = 35, RULE_semiColonStatement = 36, RULE_initialization = 37, 
		RULE_new = 38, RULE_delete = 39, RULE_return = 40, RULE_break = 41, RULE_continue = 42, 
		RULE_flowControl = 43, RULE_ifConstruct = 44, RULE_if = 45, RULE_elseif = 46, 
		RULE_else = 47, RULE_forConstruct = 48, RULE_whileConstruct = 49, RULE_expression = 50, 
		RULE_postfix = 51, RULE_functionCall = 52, RULE_subscript = 53, RULE_unary = 54, 
		RULE_multiply = 55, RULE_add = 56, RULE_shift = 57, RULE_leftshift = 58, 
		RULE_rightshift = 59, RULE_relational = 60, RULE_equality = 61, RULE_bitwiseAnd = 62, 
		RULE_bitwiseXor = 63, RULE_bitwiseOr = 64, RULE_logicalAnd = 65, RULE_logicalOr = 66, 
		RULE_assignment = 67, RULE_lshiftEquals = 68, RULE_rshiftEquals = 69, 
		RULE_literal = 70, RULE_stringLiteral = 71, RULE_charLiteral = 72, RULE_boolLiteral = 73, 
		RULE_intLiteral = 74, RULE_floatLiteral = 75, RULE_doubleLiteral = 76;
	public static readonly string[] ruleNames = {
		"compilable", "usingStatements", "usingStatement", "compilableStruct", 
		"namespace", "compilationUnit", "genericDeclaration", "genericImplmentation", 
		"type", "knownType", "voidPointer", "instanceableType", "returnableType", 
		"class", "classAccessibility", "classSpecial", "classExtension", "classMember", 
		"memberAccessibility", "field", "property", "getSet", "autoGetSet", "function", 
		"functionSpecial", "parameterDeclaration", "destructor", "interface", 
		"interfaceAccessibility", "interfaceMember", "functionDefinition", "propertyDefinition", 
		"freeFunction", "freeFunctionAccessibility", "scope", "scopeStatement", 
		"semiColonStatement", "initialization", "new", "delete", "return", "break", 
		"continue", "flowControl", "ifConstruct", "if", "elseif", "else", "forConstruct", 
		"whileConstruct", "expression", "postfix", "functionCall", "subscript", 
		"unary", "multiply", "add", "shift", "leftshift", "rightshift", "relational", 
		"equality", "bitwiseAnd", "bitwiseXor", "bitwiseOr", "logicalAnd", "logicalOr", 
		"assignment", "lshiftEquals", "rshiftEquals", "literal", "stringLiteral", 
		"charLiteral", "boolLiteral", "intLiteral", "floatLiteral", "doubleLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'using'", "'namespace'", "'class'", "'interface'", "'public'", 
		"'private'", "'protected'", "'internal'", "'static'", "'abstract'", "'virtual'", 
		"'override'", "'let'", "'new'", "'delete'", "'return'", "'break'", "'continue'", 
		"'for'", "'while'", "'if'", "'else'", "'get'", "'set'", "'void'", "'null'", 
		null, null, "'true'", "'false'", null, null, null, "'++'", "'--'", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'=='", "'!='", "'&='", "'^='", "'|='", 
		"'<='", "'>='", "'<'", "'>'", "'='", "'&&'", "'||'", "'&'", "'|'", "'^'", 
		"'.'", "'->'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'~'", "':'", 
		"';'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "USING", "NAMESPACE", "CLASS", "INTERFACE", "PUBLIC", "PRIVATE", 
		"PROTECTED", "INTERNAL", "STATIC", "ABSTRACT", "VIRTUAL", "OVERRIDE", 
		"LET", "NEW", "DELETE", "RETURN", "BREAK", "CONTINUE", "FOR", "WHILE", 
		"IF", "ELSE", "GET", "SET", "VOID", "NULL", "STRINGLITERAL", "CHARLITERAL", 
		"TRUE", "FALSE", "FLOATLITERAL", "DOUBLELITERAL", "INTLITERAL", "PLUSPLUS", 
		"MINUSMINUS", "PLUSEQUALS", "MINUSEQUALS", "TIMESEQUALS", "DIVIDEEQUALS", 
		"MODULUSEQUALS", "EQUALEQUAL", "NOTEQUAL", "ANDEQUALS", "XOREQUALS", "OREQUALS", 
		"LESSTHANEQUAL", "GREATERTHANEQUAL", "LESSTHAN", "GREATERTHAN", "EQUALS", 
		"ANDAND", "OROR", "AND", "OR", "XOR", "DOT", "ARROW", "PLUS", "MINUS", 
		"STAR", "DIVIDE", "MODULUS", "BANG", "TILDE", "COLON", "SEMICOLON", "COMMA", 
		"OPENPAREN", "CLOSEPAREN", "OPENBRACE", "CLOSEBRACE", "OPENCURLY", "CLOSECURLY", 
		"IDENTIFIER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Zirconium.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ZirconiumParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ZirconiumParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ZirconiumParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompilableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ZirconiumParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UsingStatementsContext usingStatements() {
			return GetRuleContext<UsingStatementsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CompilableStructContext compilableStruct() {
			return GetRuleContext<CompilableStructContext>(0);
		}
		public CompilableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZirconiumVisitor<TResult> typedVisitor = visitor as IZirconiumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilableContext compilable() {
		CompilableContext _localctx = new CompilableContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilable);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==USING) {
				{
				State = 154;
				usingStatements();
				}
			}

			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAMESPACE) | (1L << CLASS) | (1L << INTERFACE) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << INTERNAL) | (1L << STATIC) | (1L << ABSTRACT) | (1L << VOID))) != 0) || _la==IDENTIFIER) {
				{
				State = 157;
				compilableStruct();
				}
			}

			State = 160;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingStatementsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UsingStatementContext[] usingStatement() {
			return GetRuleContexts<UsingStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingStatementContext usingStatement(int i) {
			return GetRuleContext<UsingStatementContext>(i);
		}
		public UsingStatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingStatements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZirconiumVisitor<TResult> typedVisitor = visitor as IZirconiumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingStatementsContext usingStatements() {
		UsingStatementsContext _localctx = new UsingStatementsContext(Context, State);
		EnterRule(_localctx, 2, RULE_usingStatements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 162;
				usingStatement();
				}
				}
				State = 165;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==USING );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USING() { return GetToken(ZirconiumParser.USING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(ZirconiumParser.SEMICOLON, 0); }
		public UsingStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZirconiumVisitor<TResult> typedVisitor = visitor as IZirconiumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingStatementContext usingStatement() {
		UsingStatementContext _localctx = new UsingStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_usingStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			Match(USING);
			State = 168;
			@namespace();
			State = 169;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompilableStructContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAMESPACE() { return GetToken(ZirconiumParser.NAMESPACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(ZirconiumParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENCURLY() { return GetToken(ZirconiumParser.OPENCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSECURLY() { return GetToken(ZirconiumParser.CLOSECURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CompilationUnitContext[] compilationUnit() {
			return GetRuleContexts<CompilationUnitContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CompilationUnitContext compilationUnit(int i) {
			return GetRuleContext<CompilationUnitContext>(i);
		}
		public CompilableStructContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilableStruct; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZirconiumVisitor<TResult> typedVisitor = visitor as IZirconiumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilableStruct(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilableStructContext compilableStruct() {
		CompilableStructContext _localctx = new CompilableStructContext(Context, State);
		EnterRule(_localctx, 6, RULE_compilableStruct);
		int _la;
		try {
			State = 186;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NAMESPACE:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 171;
				Match(NAMESPACE);
				State = 172;
				Match(IDENTIFIER);
				State = 173;
				Match(OPENCURLY);
				State = 177;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << INTERFACE) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << INTERNAL) | (1L << STATIC) | (1L << ABSTRACT) | (1L << VOID))) != 0) || _la==IDENTIFIER) {
					{
					{
					State = 174;
					compilationUnit();
					}
					}
					State = 179;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 180;
				Match(CLOSECURLY);
				}
				}
				break;
			case CLASS:
			case INTERFACE:
			case PUBLIC:
			case PRIVATE:
			case INTERNAL:
			case STATIC:
			case ABSTRACT:
			case VOID:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 182;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 181;
					compilationUnit();
					}
					}
					State = 184;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << INTERFACE) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << INTERNAL) | (1L << STATIC) | (1L << ABSTRACT) | (1L << VOID))) != 0) || _la==IDENTIFIER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(ZirconiumParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(ZirconiumParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DOT() { return GetTokens(ZirconiumParser.DOT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT(int i) {
			return GetToken(ZirconiumParser.DOT, i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZirconiumVisitor<TResult> typedVisitor = visitor as IZirconiumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(Context, State);
		EnterRule(_localctx, 8, RULE_namespace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 188;
			Match(IDENTIFIER);
			State = 193;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DOT) {
				{
				{
				State = 189;
				Match(DOT);
				State = 190;
				Match(IDENTIFIER);
				}
				}
				State = 195;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompilationUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ClassContext @class() {
			return GetRuleContext<ClassContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InterfaceContext @interface() {
			return GetRuleContext<InterfaceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FreeFunctionContext freeFunction() {
			return GetRuleContext<FreeFunctionContext>(0);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZirconiumVisitor<TResult> typedVisitor = visitor as IZirconiumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(Context, State);
		EnterRule(_localctx, 10, RULE_compilationUnit);
		try {
			State = 199;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 196;
				@class();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 197;
				@interface();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 198;
				freeFunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
